--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,159 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
+    docker:
+      - image: circleci/node:14
+    working_directory: ~/repo
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+      - run:
+          name: show current branch
+          command: echo ${CURRENT_BRANCH}
+      - restor_cache:
+          keys:
+            - app-({ checksum "package.json" })
+            - app-
+      -run:
+        name: install yarn
+        command: npm install -g yarn
+      -run:
+        name: install dependencies
+        command: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: app-({ checksum "package.json" })
+
+  deploy-to-aws-s3:
+    docker:
+      - image: circleci/node:14
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: show current branch
+          command: echo ${CURRENT_BRANCH}
+      - run:
+          name: installing aws cli
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get -y pyton-pip python-dev build-essential
+      - run:
+          name: build project
+          command: |
+            yarn install
+            yarn build
+            cd build
+            zip ../build.zip -r * .[^.]*
+            echo "build successful"
+      - run:
+          name: deploy to aws s3
+          command: |
+            if [ "${CURRENT_BRANCH}" == "master" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
+            elif [ "${CURRENT_BRANCH}" == "stagin" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
+            else
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+            fi
+  deploy-to-aws-s3:
+    docker:
+      - image: circleci/node:14
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: show current branch
+          command: echo ${CURRENT_BRANCH}
+      - run:
+          name: installing aws cli
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get -y pyton-pip python-dev build-essential
+      - run:
+          name: build project
+          command: |
+            yarn install
+            yarn build
+            cd build
+            zip ../build.zip -r * .[^.]*
+            echo "build successful"
+      - run:
+          name: deploy to aws s3
+          command: |
+            if [ "${CURRENT_BRANCH}" == "master" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
+            elif [ "${CURRENT_BRANCH}" == "stagin" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
+            else
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+            fi
+  deploy-to-aws-cloudfront:
+    docker:
+      - image: circleci/node:14
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: show current branch
+          command: echo ${CURRENT_BRANCH}
+      - run:
+          name: installing aws cli
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get -y pyton-pip python-dev build-essential
+      - run:
+          name: build project
+          command: |
+            yarn install
+            yarn build
+            cd build
+            zip ../build.zip -r * .[^.]*
+            echo "build successful"
+      - run:
+          name: deploy to aws cloudfront
+          command: |
+            aws configure set preview.cloudfront
+            if [ "${CURRENT_BRANCH}" == "master" ]
+            then
+              aws cloudfront create-invalidation --distribution-id ${PRODUCTION_DISTRIBUTION_ID} --paths /\*
+            elif [ "${CURRENT_BRANCH}" == "stagin" ]
+            then
+              aws cloudfront create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --paths /\*
+            else
+              aws cloudfront create-invalidation --distribution-id ${DEV_DISTRIBUTION_ID} --paths /\*
+            fi
+
+workflow:
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy-to-aws-s3:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+      - deploy-to-aws-cloudfront:
+        requires:
+          - deploy-to-aws-s3
+        filters:
+          branches:
+            only:
+              - develop
+              - staging
+              - master
