--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,21 +9,21 @@ jobs:
       - checkout
       - run:
           name: show current branch
-          command: echo ${CURRENT_BRANCH}
-      - restor_cache:
+          command: echo ${CIRCLE_BRANCH}
+      - restore_cache:
           keys:
-            - app-({ checksum "package.json" })
+            - app-{{ checksum "package.json" }}
             - app-
       - run:
-        name: install yarn
-        command: npm install -g yarn
+          name: install yarn
+          command: npm install -g yarn
       - run:
-        name: install dependencies
-        command: yarn install
+          name: install dependencies
+          command: yarn install
       - save_cache:
           paths:
             - node_modules
-          key: app-({ checksum "package.json" })
+          key: app-{{ checksum "package.json" }}
 
   deploy-to-aws-s3:
     docker:
@@ -33,14 +33,14 @@ jobs:
       - checkout
       - run:
           name: show current branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${CIRCLE_BRANCH}
       - run:
           name: installing aws cli
           working_directory: /
           command: |
             sudo apt-get -y -qq update
             sudo apt-get install -y awscli
-            sudo apt-get -y pyton-pip python-dev build-essential
+            sudo apt-get install -y python-pip python-dev build-essential
       - run:
           name: build project
           command: |
@@ -52,10 +52,10 @@ jobs:
       - run:
           name: deploy to aws s3
           command: |
-            if [ "${CURRENT_BRANCH}" == "master" ]
+            if [ "${CIRCLE_BRANCH}" == "master" ]
             then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elif [ "${CURRENT_BRANCH}" == "stagin" ]
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]
             then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
             else
@@ -69,14 +69,14 @@ jobs:
       - checkout
       - run:
           name: show current branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${CIRCLE_BRANCH}
       - run:
           name: installing aws cli
           working_directory: /
           command: |
             sudo apt-get -y -qq update
             sudo apt-get install -y awscli
-            sudo apt-get -y pyton-pip python-dev build-essential
+            sudo apt-get install -y python-pip python-dev build-essential
       - run:
           name: build project
           command: |
@@ -88,18 +88,17 @@ jobs:
       - run:
           name: deploy to aws cloudfront
           command: |
-            aws configure set preview.cloudfront
-            if [ "${CURRENT_BRANCH}" == "master" ]
+            aws configure set preview.cloudfront true
+            if [ "${CIRCLE_BRANCH}" == "master" ]
             then
               aws cloudfront create-invalidation --distribution-id ${PRODUCTION_DISTRIBUTION_ID} --paths /\*
-            elif [ "${CURRENT_BRANCH}" == "stagin" ]
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]
             then
               aws cloudfront create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --paths /\*
             else
               aws cloudfront create-invalidation --distribution-id ${DEV_DISTRIBUTION_ID} --paths /\*
             fi
-
-workflow:
+workflows:
   build_and_deploy:
     jobs:
       - build
@@ -113,11 +112,11 @@ workflow:
                 - staging
                 - master
       - deploy-to-aws-cloudfront:
-        requires:
-          - deploy-to-aws-s3
-        filters:
-          branches:
-            only:
-              - develop
-              - staging
-              - master
+          requires:
+            - deploy-to-aws-s3
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
