--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,8 @@ jobs:
             - app-{{ checksum "package.json" }}
             - app-
       - run:
-          name: install yarn
-          command: npm install -g yarn
-      - run:
           name: install dependencies
-          command: yarn install
+          command: npm install
       - save_cache:
           paths:
             - node_modules
@@ -44,8 +41,8 @@ jobs:
       - run:
           name: build project
           command: |
-            yarn install
-            yarn build
+            npm install
+            npm run build
             cd build
             zip ../build.zip -r * .[^.]*
             echo "build successful"
@@ -80,8 +77,8 @@ jobs:
       - run:
           name: build project
           command: |
-            yarn install
-            yarn build
+            npm install
+            npm run build
             cd build
             zip ../build.zip -r * .[^.]*
             echo "build successful"
