added app executors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,14 @@
 version: 2.1
 
-jobs:
-  build:
+executors:
+  app-executor:
     docker:
       - image: circleci/node:14
     working_directory: ~/repo
+
+jobs:
+  build:
+    executor: app-executor
     steps:
       - checkout
       - run:
@@ -23,9 +27,7 @@ jobs:
           key: app-{{ checksum "package.json" }}
 
   deploy-to-aws-s3:
-    docker:
-      - image: circleci/node:14
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
       - run:
@@ -59,9 +61,7 @@ jobs:
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
             fi
   deploy-to-aws-cloudfront:
-    docker:
-      - image: circleci/node:14
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
       - run:
